--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,7 +18,7 @@ main {
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: #00695c;
+  background-color: #e02b4c;
   padding: 0 1.5rem;
 }
 
@@ -96,7 +96,7 @@ main {
   font: inherit;
   border: 1px solid #00695c;
   color: #00695c;
-  background: white;
+  background: #e3bac2;
   border-radius: 3px;
   cursor: pointer;
 }
