--- a/views/shop.html
+++ b/views/shop.html
@@ -14,15 +14,15 @@
     <header class="main-header">
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
-                <li class="main-header__item"><a class="active" href="/">Shop</a></li>
-                <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
+                <li class="main-header__item"><a class="active" href="/">Market details</a></li>
+                <li class="main-header__item"><a href="/admin/add-product">Add Shop Number Details</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <h1>My Products</h1>
-        <p>List of all the products...</p>
+        <p>List of all the Shop Available...</p>
         <!-- <div class="grid">
             <article class="card product-item">
                 <header class="card__header">
